apps/microservices-demo/abtesting/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-ab-vsvc
  namespace: demo
spec:
  hosts:
  - api
  http:
  - name: primary
    route:
    - destination:
        host: api-ab-stable
      weight: 100
    - destination:
        host: api-ab-canary
      weight: 0
  - name: canary-header
    match:
    - headers:
        x-user-group:
          exact: beta
    route:
    - destination:
        host: api-ab-canary
      weight: 100
    - destination:
        host: api-ab-stable
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-ab-dr
  namespace: demo
spec:
  host: api
  subsets:
  - name: stable
    labels:
      app: api-ab
  - name: canary
    labels:
      app: api-ab
